manifests/fathom/fathom.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fathom
  namespace: fathom
  labels:
    app.kubernetes.io/name: fathom
spec:
  ports:
  - port: 8080
  selector:
    app.kubernetes.io/name: fathom

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fathom
  namespace: fathom
  labels:
    app.kubernetes.io/name: fathom
spec:
  rules:
  - host: fathom.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: fathom
          servicePort: 8080
  tls:
  - hosts:
    - fathom.codeformuenster.org
    secretName: fathom-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fathom
  namespace: fathom
  labels:
    app.kubernetes.io/name: fathom
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fathom
  spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fathom
    spec:
      containers:
      - name: fathom
        image: docker.io/usefathom/fathom@sha256:c2996d283c14f8b37424324080b32ad2aac0055b4c12572cf19d61e6d90784bf
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: fathom-config
            mountPath: /app/.env
            subPath: .env
          - mountPath: /fathom-db
            name: fathom-database-volume
      volumes:
        - name: fathom-config
          configMap:
            name: fathom-dot-env
        - name: fathom-database-volume
          persistentVolumeClaim:
            claimName: fathom-database-volume-claim
